--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,17 +1,17 @@
 <div class="sidebar">
-  <img src="{{ site.baseurl }}public/profile_picture.jpg" alt="hi" class="inline"/>
+  <img src="{{ '/' | relative_url }}public/profile_picture.jpg" alt="hi" class="inline"/>
   <!-- <div class="container sidebar-sticky"> -->
   <div class="container"></div>
     <div class="sidebar-about">
       <h1>
-        <a href="{{ site.baseurl }}">
+        <a href="{{ '/' | relative_url }}">
           {{ site.title }}
         </a>
       </h1>
       <p class="lead">{{ site.description }}</p>
     </div>
 
-    <!-- <img src="{{ site.baseurl }}public/profile_picture.jpg" alt="hi" class="inline"/> -->
+    <!-- <img src="{{ '/' | relative_url }}public/profile_picture.jpg" alt="hi" class="inline"/> -->
 
     <p style="font-size: 40px; color: white; font-family: Abril Fatface;">Ashwini Raina</p>
     PhD Student Computer Science
@@ -20,8 +20,8 @@
     <br><br>
 
     <nav class="sidebar-nav">
-      <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Resume</a> -->
-      <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a> -->
+      <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/' | relative_url }}">Resume</a> -->
+      <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/' | relative_url }}">Home</a> -->
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
@@ -39,7 +39,7 @@
 
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a> -->
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a> -->
-      <a class="sidebar-nav-item" href="{{ site.baseurl }}public/resume.pdf" style="font-size: 24px;">Resume</a>
+      <a class="sidebar-nav-item" href="{{ '/' | relative_url }}public/resume.pdf" style="font-size: 24px;">Resume</a>
       <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
     </nav>
 
