--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,14 +2,14 @@
   <img src="{{ '/' | relative_url }}public/profile_picture.jpg" alt="hi" class="inline"/>
   <!-- <div class="container sidebar-sticky"> -->
   <div class="container"></div>
-    <div class="sidebar-about">
+    <!-- <div class="sidebar-about">
       <h1>
         <a href="{{ '/' | relative_url }}">
           {{ site.title }}
         </a>
       </h1>
       <p class="lead">{{ site.description }}</p>
-    </div>
+    </div> -->
 
     <!-- <img src="{{ '/' | relative_url }}public/profile_picture.jpg" alt="hi" class="inline"/> -->
 
