--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-  <img src="{{ '/' | relative_url }}public/profile_picture.jpg" alt="hi" class="inline"/>
+  <img src="{{ '/' | relative_url }}public/profile_picture_dark.jpg" alt="hi" class="inline"/>
   <!-- <div class="container sidebar-sticky"> -->
   <div class="container"></div>
     <!-- <div class="sidebar-about">
