--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -39,7 +39,7 @@
 
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a> -->
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a> -->
-      <a class="sidebar-nav-item" href="{{ '/' | relative_url }}public/resume.pdf" style="font-size: 24px;">Resume</a>
+      <a class="sidebar-nav-item" href="{{ '/' | relative_url }}public/resume-ashwiniraina.pdf" style="font-size: 24px;">Resume</a>
       <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
     </nav>
 
